updated vercel deploy

--- a/index.html
+++ b/index.html
@@ -556,12 +556,13 @@
               <img src="assets/img/team-iftar-small-logo.png" alt="">
               <span>TeamIFTAR</span>
             </a>
-            <p>You can find us on social media. Follow us, like and share with family and friends...</p>
+            <p>Team Iftar is a non-profit charity in The Gambia serving communities since 2016 through Street Iftar during Ramadan, family package distribution, medical aid, and more—all grounded in Islamic principles.</p>
+            <p class="mt-2 mb-0">You can find us on social media. Follow us, like and share with family and friends...</p>
             <div class="social-links mt-3">
-              <a href="#twitter" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#facebook" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#instagram" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a>
-              <a href="#whatsapp" class="whatsapp"><i class="bi bi-whatsapp bx bxl-whatsapp"></i></a>
+              <a href="https://www.youtube.com/@teamiftargambia" target="_blank" rel="noopener noreferrer" class="youtube"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.facebook.com/teamiftar.org" target="_blank" rel="noopener noreferrer" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/teamiftar_gmb/" target="_blank" rel="noopener noreferrer" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a>
+              <a href="https://wa.me/2203108484" target="_blank" rel="noopener noreferrer" class="whatsapp"><i class="bi bi-whatsapp bx bxl-whatsapp"></i></a>
             </div>
           </div>
 
@@ -592,7 +593,7 @@
               Sukuta Nema <br>
               West Coast Region, WCR<br>
               The Gambia <br><br>
-              <strong>Phone:</strong> +220 --- ---- / +220 --- ----<br>
+              <strong>Phone:</strong> <a href="tel:+2202210996">+220 221 0996</a><br>
               <strong>Email:</strong> teamiftarcharity@teamiftar.com<br>
             </p>
 
